--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "nodemon": "^1.12.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "author": "Juchan Kim",
   "license": "ISC"
