--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "app.js",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "connect": "^3.6.5",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
     "mongoose": "^4.13.0",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "serve-favicon": "^2.4.5"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
