--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
     "mongoose": "^4.13.0",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "query-string": "^5.0.1",
+    "request": "^2.83.0"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
